--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,6 @@ jobs:
     strategy:
       matrix:
         node: [18, 20]
-    env:
 
     steps:
       - name: Checkout
@@ -18,17 +17,11 @@ jobs:
         with:
           fetch-depth: 2
 
-      - name: Set node
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: npm
-
       - name: Install dependencies
-        run: npm install
-
-      - name: Check
-        run: npm check
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - run: npm ci
 
       - name: Format
         run: npm format:check
