--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,21 +8,18 @@ on:
 jobs:
   verify:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 2
 
-      - name: Set node
-        uses: actions/setup-node@v3
+      - name: Install dependencies
+      - uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: npm
-
-      - name: Install dependencies
-        run: npm install
+      - run: npm ci
 
       - name: Publish packages
         id: changesets
