--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,11 +15,12 @@ jobs:
         with:
           fetch-depth: 2
 
-      - name: Install dependencies
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-      - run: npm ci
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Publish packages
         id: changesets
