--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,18 +10,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 2
-
-      - uses: actions/setup-node@v4
+      - name: Install dependencies
+        uses: actions/setup-node@v3
         with:
           node-version: 18
-
-      - name: Install dependencies
-        run: npm ci
-
+      - run: npm ci
       - name: Publish packages
         id: changesets
         uses: changesets/action@v1
