--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
       - run: npm ci
 
       - name: Build doc
-        run: npm run build:docs
+        run: npm run docs:build
 
       - uses: actions/configure-pages@v2
 
