--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint . --fix --ignore-path .gitignore",
     "format": "prettier --write .",
     "format:check": "prettier --list-different .",
+    "example:dev": "npm run dev --workspace ./example",
     "docs:dev": "npm run docs:dev --workspace ./packages/docs",
     "docs:preview": "npm run docs:preview --workspace ./packages/docs",
     "docs:build": "npm run docs:build --workspace ./packages/docs"
