--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc --build --verbose",
-    "lint": "eslint . --fix --ignore-path .gitignore",
+    "lint": "npm run lint:check -- --fix",
+    "lint:check": "eslint . --ignore-path .gitignore",
     "format": "prettier --write .",
     "format:check": "prettier --list-different .",
-    "example:dev": "npm run dev --workspace ./example",
-    "docs:dev": "npm run docs:dev --workspace ./packages/docs",
-    "docs:preview": "npm run docs:preview --workspace ./packages/docs",
-    "docs:build": "npm run docs:build --workspace ./packages/docs"
+    "dev:docs": "npm run docs:dev --workspace ./packages/docs",
+    "dev:example": "npm run dev --workspace ./example",
+    "preview:docs": "npm run docs:preview --workspace ./packages/docs",
+    "preview:example": "npm run docs:preview --workspace ././example",
+    "build:docs": "npm run docs:build --workspace ./packages/docs",
+    "build:example": "npm run docs:build --workspace ./example"
   },
   "workspaces": [
     "packages/*",
