--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@hangtime/motherboard": "^0.0.5"
+    "@hangtime/grip-connect": "^0.0.5"
   },
   "devDependencies": {
     "typescript": "^5.3.3",
