first step to reading the motherboards data

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -4,6 +4,6 @@
   "compilerOptions": {
     "tsBuildInfoFile": "node_modules/.cache/.tsbuildinfo",
     "types": ["web-bluetooth"],
-    "outDir": "./build"
-  }
+    "outDir": "./build",
+  },
 }
