--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@hangtime/grip-connect",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "A client that can establish connections with various Force-Sensing Hangboards/Plates used by climbers for strength measurement. Examples of such hangboards include the Motherboard, Climbro, SmartBoard, Entralpi or Tindeq Progressor",
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc --build"
   },
   "author": "Stevie-Ray Hartog <mail@stevie-ray.nl>",
-  "license": "MIT",
+  "license": "BSD-2-Clause",
   "devDependencies": {},
   "repository": {
     "type": "git",
