add is connected funtion, add battery + info commands, move calibration to stream file

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -2,6 +2,6 @@
   "extends": "../../tsconfig.json",
   "include": ["src"],
   "compilerOptions": {
-    "tsBuildInfoFile": "node_modules/.cache/.tsbuildinfo",
-  },
+    "tsBuildInfoFile": "node_modules/.cache/.tsbuildinfo"
+  }
 }
