--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,30 +1,18 @@
-name: Release
-
+name: Publish Package to npmjs
 on:
-  push:
-    branches:
-      - main
-
+  release:
+    types: [published]
 jobs:
-  verify:
+  build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
+      # Setup .npmrc file to publish to npm
+      - uses: actions/setup-node@v3
         with:
-          fetch-depth: 2
-      - name: Install dependencies
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
+          node-version: 20
+          registry-url: 'https://registry.npmjs.org'
       - run: npm ci
-#      - name: Publish packages
-#        id: changesets
-#        uses: changesets/action@v1
-#        with:
-#          publish: npm release
-#          commit: "Update versions"
-#          title: "Update versions"
-#        env:
-#          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-#          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
