go to subfolder

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,9 +16,11 @@ jobs:
         with:
           node-version: 20
           registry-url: 'https://registry.npmjs.org'
+      - name: Go to subfolder
+        run: cd packages/core
       - name: Install dependencies and build
         run: npm ci && npm run build
       - name: Publish package on NPM
-        run: npm -r publish --access public
+        run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
