fix gitlab scripts

--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -18,7 +18,7 @@ jobs:
       - run: npm ci
 
       - name: Format
-        run: npm format:check
+        run: npm run format:check
 
       - name: Lint
-        run: npm lint:check
+        run: npm run lint:check
