improve page layout, add analytics and footer links

--- a/examples/chart/package.json
+++ b/examples/chart/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@hangtime/grip-connect": "^0.3.0",
     "chart.js": "^4.4.2"
   },
