--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -7,6 +7,6 @@
     "docs:preview": "vitepress preview src"
   },
   "devDependencies": {
-    "vitepress": "^1.0.0-rc.33"
+    "vitepress": "^1.2.2"
   }
 }
