--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "BSD-2-Clause",
   "scripts": {
     "lint": "npm run lint:check -- --fix",
-    "lint:check": "eslint . --ignore-path .gitignore",
+    "lint:check": "eslint .",
     "format": "prettier --write .",
     "format:check": "prettier --list-different .",
     "dev:docs": "npm run docs:dev --workspace ./packages/docs",
@@ -38,13 +38,14 @@
     "@hangtime/grip-connect": "^0.3.4"
   },
   "devDependencies": {
-    "@types/node": "^20.14.14",
+    "@eslint/js": "^9.9.0",
+    "@types/eslint__js": "^8.42.3",
+    "@types/node": "^20.16.0",
     "@types/web-bluetooth": "^0.0.20",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.9.0",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.1.0"
   }
 }
