update tsconfig so it builds a dist folder

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm run lint:check
 
       - name: Build
-        run: npm ci && npm run build
+        run: npm run build
 
       - name: Go to subfolder and publish package
         run: cd packages/core && npm publish --access public
