--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@hangtime/grip-connect",
-  "version": "0.3.5",
+  "version": "0.3.6",
   "description": "A client that can establish connections with various Force-Sensing Hangboards/Plates used by climbers for strength measurement. Examples of such hangboards include the Griptonite Motherboard, Climbro, SmartBoard, Entralpi or Tindeq Progressor",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc --build"
   },
