--- a/.gitignore
+++ b/.gitignore
@@ -109,8 +109,8 @@ dist/
 # public
 
 # vitepress build output
-.vitepress/dist/
-.vitepress/cache/
+**/.vitepress/dist/
+**/.vitepress/cache/
 
 # Serverless directories
 .serverless/
