--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
     "dev:examples:flappy-bird": "npm run dev --workspace ./examples/flappy-bird",
     "dev:examples:kilter-board": "npm run dev --workspace ./examples/kilter-board",
     "dev:examples:pong": "npm run dev --workspace ./examples/pong",
-    "preview:docs": "npm run docs:preview --workspace ./packages/docs",
-    "preview:examples:chart": "npm run docs:preview --workspace ./examples/chart",
-    "preview:examples:flappy-bird": "npm run docs:preview --workspace ./examples/flappy-bird",
-    "preview:examples:kilter-board": "npm run docs:preview --workspace ./examples/kilter-board",
-    "preview:examples:pong": "npm run docs:preview --workspace ./examples/pong",
+    "preview:docs": "npm run preview --workspace ./packages/docs",
+    "preview:examples:chart": "npm run preview --workspace ./examples/chart",
+    "preview:examples:flappy-bird": "npm run preview --workspace ./examples/flappy-bird",
+    "preview:examples:kilter-board": "npm run preview --workspace ./examples/kilter-board",
+    "preview:examples:pong": "npm run preview --workspace ./examples/pong",
     "build": "tsc --build --verbose --force",
     "build:core": "npm run build --workspace ./packages/core",
     "build:docs": "npm run docs:build --workspace ./packages/docs",
-    "build:examples:chart": "npm run build --workspace ./examples/chart",
-    "build:examples:flappy-bird": "npm run build --workspace ./examples/flappy-bird",
-    "build:examples:kilter-board": "npm run build --workspace ./examples/kilter-board",
-    "build:examples:pong": "npm run build --workspace ./examples/pong"
+    "build:examples:chart": "npm run build && npm run build --workspace ./examples/chart",
+    "build:examples:flappy-bird": "npm run build && npm run build --workspace ./examples/flappy-bird",
+    "build:examples:kilter-board": "npm run build && npm run build --workspace ./examples/kilter-board",
+    "build:examples:pong": "npm run build && npm run build --workspace ./examples/pong"
   },
   "workspaces": [
     "packages/*",
