--- a/examples/chart/package.json
+++ b/examples/chart/package.json
@@ -17,7 +17,8 @@
     "chart.js": "^4.4.4"
   },
   "devDependencies": {
-    "typescript": "^5.5.4",
+    "@types/w3c-web-serial": "^1.0.6",
+    "typescript": "^5.6.2",
     "vite": "^5.4.3"
   },
   "workspaces": [
