Add PitchSix Force Board

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,6 +23,8 @@
     "motherboard",
     "tindeq",
     "progressor",
+    "pitchsix",
+    "forceboard",
     "entralpi",
     "wh-c06",
     "kilterboard"
