--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   },
   "author": "Stevie-Ray Hartog <mail@stevie-ray.nl>",
   "license": "BSD-2-Clause",
+  "type": "module",
   "scripts": {
     "lint": "npm run lint:check -- --fix",
-    "lint:check": "eslint . --flag unstable_ts_config",
+    "lint:check": "eslint .",
     "format": "prettier --write .",
     "format:check": "prettier --list-different .",
     "dev:docs": "npm run docs:dev --workspace ./packages/docs",
@@ -41,14 +42,14 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/eslint__js": "^8.42.3",
-    "@types/node": "^20.17.10",
+    "@types/node": "^20.17.14",
     "@types/web-bluetooth": "^0.0.20",
-    "eslint": "^9.16.0",
+    "eslint": "^9.18.0",
     "husky": "^9.1.7",
-    "jiti": "^2.4.1",
+    "jiti": "^2.4.2",
     "prettier": "^3.4.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.18.0"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.20.0"
   }
 }
