--- a/examples/kilter-board/tsconfig.json
+++ b/examples/kilter-board/tsconfig.json
@@ -1,10 +1,12 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
     "module": "ESNext",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
+    "types": ["web-bluetooth", "w3c-web-serial"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
