fix JSR Doc generation

--- a/package.json
+++ b/package.json
@@ -36,12 +36,13 @@
     "examples/*"
   ],
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
+    "@eslint/js": "^9.19.0",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^20.17.16",
     "@types/w3c-web-serial": "^1.0.7",
     "@types/web-bluetooth": "^0.0.20",
     "eslint": "^9.19.0",
+    "globals": "^15.14.0",
     "husky": "^9.1.7",
     "jiti": "^2.4.2",
     "prettier": "^3.4.2",
