--- a/deno.json
+++ b/deno.json
@@ -19,5 +19,6 @@
   "compilerOptions": {
     "lib": ["deno.window", "dom"]
   },
-  "unstable": ["sloppy-imports"]
+  "unstable": ["sloppy-imports"],
+  "nodeModulesDir": "auto"
 }
