--- a/examples/chart/package.json
+++ b/examples/chart/package.json
@@ -13,12 +13,12 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@hangtime/grip-connect": "^0.7.0",
+    "@hangtime/grip-connect-capacitor": "file:../../packages/core",
     "chart.js": "^4.4.9"
   },
   "devDependencies": {
     "typescript": "^5.8.3",
-    "vite": "^6.3.2"
+    "vite": "^6.3.4"
   },
   "workspaces": [
     "examples"
