--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "format": "prettier --write .",
     "format:check": "prettier --list-different .",
     "dev:docs": "npm run docs:dev --workspace ./packages/docs",
+    "dev:examples:capacitor": "npm run start --workspace ./examples/capacitor",
     "dev:examples:chart": "npm run dev --workspace ./examples/chart",
     "dev:examples:flappy-bird": "npm run dev --workspace ./examples/flappy-bird",
     "dev:examples:kilter-board": "npm run dev --workspace ./examples/kilter-board",
     "dev:examples:pong": "npm run dev --workspace ./examples/pong",
     "preview:docs": "npm run preview --workspace ./packages/docs",
+    "preview:examples:capacitor": "npm run preview --workspace ./examples/capacitor",
     "preview:examples:chart": "npm run preview --workspace ./examples/chart",
     "preview:examples:flappy-bird": "npm run preview --workspace ./examples/flappy-bird",
     "preview:examples:kilter-board": "npm run preview --workspace ./examples/kilter-board",
@@ -26,6 +28,7 @@
     "build:core": "npm run build --workspace ./packages/core",
     "build:capacitor": "npm run build --workspace ./packages/capacitor",
     "build:docs": "npm run docs:build --workspace ./packages/docs",
+    "build:examples:capacitor": "npm run build && npm run build --workspace ./examples/capacitor",
     "build:examples:chart": "npm run build && npm run build --workspace ./examples/chart",
     "build:examples:flappy-bird": "npm run build && npm run build --workspace ./examples/flappy-bird",
     "build:examples:kilter-board": "npm run build && npm run build --workspace ./examples/kilter-board",
@@ -37,7 +40,7 @@
     "examples/*"
   ],
   "devDependencies": {
-    "@eslint/js": "^9.22.0",
+    "@eslint/js": "^9.26.0",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^20.17.32",
     "@types/w3c-web-serial": "^1.0.8",
