--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "include": ["packages/**/src/**/*", "examples/**/src/**/*"],
   "references": [
-    // { "path": "packages/core" },
-    // { "path": "packages/capacitor" }
+    { "path": "packages/core" },
+    { "path": "packages/capacitor" }
     // { "path": "examples/chart" },
     // { "path": "examples/flappy-bird" },
     // { "path": "examples/kilter-board" },
