--- a/examples/reactnative/package.json
+++ b/examples/reactnative/package.json
@@ -14,9 +14,9 @@
     "@expo/vector-icons": "^14.1.0",
     "@hangtime/grip-connect-react-native": "file:../../packages/react-native",
     "@react-native-picker/picker": "^2.11.0",
-    "@react-navigation/bottom-tabs": "^7.3.10",
-    "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/bottom-tabs": "^7.3.11",
+    "@react-navigation/elements": "^2.4.0",
+    "@react-navigation/native": "^7.1.7",
     "expo": "~53.0.6",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.5",
@@ -25,9 +25,9 @@
     "expo-image": "~2.1.6",
     "expo-linking": "~7.1.4",
     "expo-router": "~5.0.5",
-    "expo-splash-screen": "~0.30.8",
+    "expo-splash-screen": "^0.30.8",
     "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.4",
+    "expo-symbols": "^0.4.4",
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
     "react": "19.0.0",
@@ -38,13 +38,13 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-web": "~0.20.0",
+    "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/core": "^7.27.1",
     "@types/react": "~19.0.10",
-    "eslint": "^9.25.0",
+    "eslint": "^9.26.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
   },
