--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "include": ["packages/**/src/**/*", "examples/**/src/**/*"],
   "references": [
-    { "path": "packages/core" },
     { "path": "packages/capacitor" },
+    { "path": "packages/cli" },
+    { "path": "packages/core" },
     { "path": "packages/react-native" }
     // { "path": "examples/chart" },
     // { "path": "examples/flappy-bird" },
